--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,5 @@
   "singleQuote": true,
   "trailingComma": "all",
   "tabWidth": 2,
-  "printWidth": 80,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "printWidth": 80
 }
