--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,11 @@ next-env.d.ts
 !.yarn/versions
 
 .pnp.*
+
+
+# next-video
+videos/*
+!videos/*.json
+!videos/*.js
+!videos/*.ts
+public/_next-video
