--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.1.4",
     "next-video": "^1.0.6",
     "react": "^18",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18",
     "zustand": "^4.5.2"
   },
