--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.28.6",
     "axios": "^1.6.8",
+    "clsx": "^2.1.1",
     "next": "14.1.4",
     "next-video": "^1.0.6",
     "react": "^18",
@@ -34,6 +35,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.2",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.5"
   },
