--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
     "next": "14.1.4",
-    "next-video": "^1.0.6",
+    "next-videos": "1.4.1",
     "react": "^18",
     "react-cookie": "^7.1.4",
     "react-dom": "^18",
