--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "analyze": "ANALYZE=true next build && next start",
     "prepare": "husky"
   },
   "dependencies": {
@@ -14,6 +15,7 @@
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
     "next": "14.1.4",
+    "next-compose-plugins": "^2.2.1",
     "next-videos": "1.4.1",
     "react": "^18",
     "react-cookie": "^7.1.4",
@@ -21,6 +23,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
